Fix column alignment of xs- columns
Fixes an issue brought up by @gld1982ltd with the alignment of the xs (extra small) columns when on a mobile size

--- a/src/skeleton/_grid.css
+++ b/src/skeleton/_grid.css
@@ -55,6 +55,10 @@
 .xs-eleven[class*='column']       { width: calc((var(--column-width) * 11) - var(--gutter)); }
 .xs-twelve[class*='column']       { width: calc((var(--column-width) * 12) - var(--gutter)); }
 
+[class*='xs-'][class*='column'] ~ [class*='xs-'][class*='column'] {
+  margin-top: 0;
+}
+
 @media screen and (min-width: 35em) {
   [class*='column'] ~ [class*='column'] {
     margin-top: 0;
